Fix toggle button z-index issue

--- a/src/sssp/components/Toggle.module.scss
+++ b/src/sssp/components/Toggle.module.scss
@@ -3,6 +3,7 @@
   width: fit-content;
   margin: 0 auto 1rem;
   gap: 0.5rem;
+  z-index: 0;
 
   .toggleButton {
     border-radius: 0.375rem !important;
